--- a/config/ldappool.ini
+++ b/config/ldappool.ini
@@ -1,3 +1,5 @@
+server[] = ldap://localhost:389
+server[] = ldaps://localhost:636
 binddn = uid=user1,ou=users,dc=my-domain,dc=com
 bindpw = ykaHsOzEZD
 basedn = my-domain.com
