--- a/config/authn_ldap.ini
+++ b/config/authn_ldap.ini
@@ -1,2 +1,4 @@
 scope = sub
 searchfilter = (&(objectclass=*)(uid=%u))
+#dn[] = uid=%u,ou=users,dc=my-domain,dc=com
+#dn[] = uid=%u,ou=people,dc=my-domain,dc=com
