alias and authn use pool's config

--- a/pool/config/ldap-pool.ini
+++ b/pool/config/ldap-pool.ini
@@ -4,3 +4,16 @@ binddn = uid=user1,ou=users,dc=my-domain,dc=com
 bindpw = ykaHsOzEZD
 basedn = my-domain.com
 scope = base
+
+[authn]
+scope = sub
+searchfilter = (&(objectclass=*)(uid=%u))
+#dn[] = uid=%u,ou=users,dc=my-domain,dc=com
+#dn[] = uid=%u,ou=people,dc=my-domain,dc=com
+
+[aliases]
+scope = sub
+searchfilter = (&(objectclass=groupOfNames)(mailLocalAddress=%a))
+attribute = member
+attribute_is_dn = true
+subattribute = mailLocalAddress
