changed connection.server.ldappool to connection.server.notes.ldappool and switched authz config to ldappool's config file

--- a/pool/config/ldap-pool.ini
+++ b/pool/config/ldap-pool.ini
@@ -11,9 +11,14 @@ searchfilter = (&(objectclass=*)(uid=%u))
 #dn[] = uid=%u,ou=users,dc=my-domain,dc=com
 #dn[] = uid=%u,ou=people,dc=my-domain,dc=com
 
+[authz]
+scope = sub
+searchfilter = (&(objectclass=*)(uid=%u)(mailLocalAddress=%a))
+
 [aliases]
 scope = sub
 searchfilter = (&(objectclass=groupOfNames)(mailLocalAddress=%a))
 attribute = member
 attribute_is_dn = true
 subattribute = mailLocalAddress
+
