shared config file for rcpt_to

--- a/pool/config/ldap-pool.ini
+++ b/pool/config/ldap-pool.ini
@@ -22,3 +22,7 @@ attribute = member
 attribute_is_dn = true
 subattribute = mailLocalAddress
 
+[rcpt_to]
+scope = sub
+searchfilter = (&(objectclass=*)(mail=%a))
+
