--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "haraka-plugin-ldap",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-  },
-  "scripts": {
-  },
+  "directories": {},
+  "scripts": {},
   "keywords": [
     "haraka",
     "ldap",
@@ -32,6 +30,6 @@
     "ldapjs": "^1.0.1",
     "async": "^2.1.2",
     "address-rfc2821": "*",
-    "haraka-constants": "*" 
+    "haraka-constants": "*"
   }
 }
