--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "name": "Ansgar Tasler",
     "email": "ansgar.tasler@warkdag.com"
   },
+  "repository": "https://github.com/tasansga/haraka-ldap.git",
   "license": "MIT",
   "devDependencies": {
     "btoa": "*",
