import ldap config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,16 @@ addons:
     packages:
     - ldap-utils
     - slapd
+  hosts:
+    - travis.example.com
+
+before_install:
+    # - tests/travis/ldap-setup.sh
+    - sed -i -e '/^server/ s/389/3389/' -e 's/^server.*636$//' config/ldap.ini
+    - mkdir /tmp/slapd
+    - slapd -f tests/travis/slapd.conf -h ldap://localhost:3389 &
+    - sleep 3
+    - ldapadd -x -D "cn=admin,dc=my-domain,dc=com" -w "rAR84,NZ=F" -h localhost:3389 -f tests/env/testdata.ldif
 
 before_script:
 
@@ -21,4 +31,5 @@ after_success:
     - ./node_modules/.bin/codecov
     - grunt eslint:test
 
+#sudo: required
 sudo: false
