--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
 
 before_install:
     # - tests/travis/ldap-setup.sh
-    - sed -i -e '/^server/ s/389/3389/' -e 's/^server.*636$//' config/ldap.ini
+    - sed -i -e '/^server/ s/:389/:3389/' -e 's/^server.*:636$//' config/ldap.ini
     - mkdir /tmp/slapd
     - slapd -f tests/travis/slapd.conf -h ldap://localhost:3389 &
     - sleep 3
@@ -31,12 +31,5 @@ script:
     - npm test
 
 after_success:
-
-# enable codecov, which doesn't currently work for plugins because
-# plugins are run in vm.runInNewContext()
-#
-#   - npm install istanbul codecov
-#   - npm run cover
-#   - ./node_modules/.bin/codecov
 
 sudo: false
