--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "haraka-plugin-ldap",
-  "version": "1.0.2",
-  "description": "",
+  "version": "1.0.3",
+  "description": "LDAP plugin for Haraka",
   "main": "index.js",
   "directories": {},
   "scripts": {
-    "lint": "./node_modules/.bin/eslint *.js test/**/*.js",
-    "lintfix": "./node_modules/.bin/eslint --fix *.js test/**/*.js",
-    "test": "./run_tests"
+    "lint": "npx eslint *.js test/**/*.js",
+    "lintfix": "npx eslint --fix *.js test/**/*.js",
+    "test": "npx mocha"
   },
   "keywords": [
     "haraka",
@@ -30,13 +30,13 @@
     "btoa": "*",
     "eslint": "^4.8.0",
     "eslint-plugin-haraka": "^1.0.9",
-    "haraka-test-fixtures": "^1.0.9",
-    "nodeunit": "^0.10.2"
+    "haraka-test-fixtures": "^1.0.9"
   },
   "dependencies": {
-    "ldapjs": "^1.0.1",
-    "async": "^2.1.2",
     "address-rfc2821": "*",
-    "haraka-constants": "*"
+    "async": "^2.1.2",
+    "haraka-constants": "*",
+    "ldapjs": "^1.0.1",
+    "mocha": "*"
   }
 }
