enable SSL, update pool.js

--- a/test/travis/slapd.conf
+++ b/test/travis/slapd.conf
@@ -14,4 +14,7 @@ directory /tmp/slapd
 
 suffix    "dc=my-domain,dc=com"
 rootdn    "cn=admin,dc=my-domain,dc=com"
-rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr 
+rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr
+
+TLSCertificateFile test/env/slapdcert.pem
+TLSCertificateKeyFile test/env/slapdkey.pem
