--- a/test/travis/slapd.conf
+++ b/test/travis/slapd.conf
@@ -15,3 +15,6 @@ directory /tmp/slapd
 suffix    "dc=my-domain,dc=com"
 rootdn    "cn=admin,dc=my-domain,dc=com"
 rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr
+
+TLSCertificateFile test/env/slapdcert.pem
+TLSCertificateKeyFile test/env/slapdkey.pem
