--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,11 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
 package-lock.json
+bower_components
+# Optional npm cache directory
+.npmrc
+.idea
+.DS_Store
+haraka-update.sh
