--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,6 @@ jobs:
   test:
     needs: lint
     runs-on: ${{ matrix.os }}
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
     strategy:
       matrix:
         os: [ ubuntu-latest ]
@@ -30,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: sudo apt-get install --no-install-recommends -y slapd=2.5.14
     - run: npm test
 
   # test-win:
