--- a/test/fixtures/travis/slapd.conf
+++ b/test/fixtures/travis/slapd.conf
@@ -12,9 +12,9 @@ modulepath /usr/lib/openldap
 database  ldif
 directory /tmp/slapd
 
-suffix    "dc=my-domain,dc=com"
-rootdn    "cn=admin,dc=my-domain,dc=com"
+suffix    "dc=example,dc=com"
+rootdn    "cn=admin,dc=example,dc=com"
 rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr
 
-TLSCertificateFile test/env/slapdcert.pem
-TLSCertificateKeyFile test/env/slapdkey.pem
+TLSCertificateFile test/fixtures/env/slapdcert.pem
+TLSCertificateKeyFile test/fixtures/env/slapdkey.pem
