--- a/test/fixtures/macports/slapd.conf
+++ b/test/fixtures/macports/slapd.conf
@@ -1,13 +1,13 @@
-include   /etc/openldap/schema/core.schema
-include   /etc/openldap/schema/cosine.schema
-include   /etc/openldap/schema/misc.schema
-include   /etc/openldap/schema/inetorgperson.schema
-# include   /etc/openldap/schema/nis.schema
+include   /opt/local/etc/openldap/schema/core.schema
+include   /opt/local/etc/openldap/schema/cosine.schema
+include   /opt/local/etc/openldap/schema/misc.schema
+include   /opt/local/etc/openldap/schema/inetorgperson.schema
+# include   /opt/local/etc/openldap/schema/nis.schema
 
 pidfile  /var/run/slapd/slapd.pid
 #argsfile /var/tmp/slapd/slapd.args
 
-modulepath /usr/lib/openldap
+#modulepath /usr/lib/openldap
 
 database  ldif
 directory /var/tmp/slapd
