--- a/test/fixtures/linux/slapd.conf
+++ b/test/fixtures/linux/slapd.conf
@@ -17,5 +17,5 @@ suffix    "dc=example,dc=com"
 rootdn    "cn=admin,dc=example,dc=com"
 rootpw    {SSHA}2Gl8VBvuOxkhcrVCRNzDcCG9ecJHg0gl
 
-TLSCertificateFile test/config/env/slapdcert.pem
-TLSCertificateKeyFile test/config/env/slapdkey.pem
+TLSCertificateFile test/env/slapdcert.pem
+TLSCertificateKeyFile test/env/slapdkey.pem
