--- a/test/fixtures/macports/slapd.conf
+++ b/test/fixtures/macports/slapd.conf
@@ -16,5 +16,5 @@ suffix    "dc=example,dc=com"
 rootdn    "cn=admin,dc=example,dc=com"
 rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr
 
-TLSCertificateFile test/config/env/slapdcert.pem
-TLSCertificateKeyFile test/config/env/slapdkey.pem
+TLSCertificateFile test/env/slapdcert.pem
+TLSCertificateKeyFile test/env/slapdkey.pem
