--- a/test/fixtures/travis/slapd.conf
+++ b/test/fixtures/travis/slapd.conf
@@ -16,5 +16,5 @@ suffix    "dc=example,dc=com"
 rootdn    "cn=admin,dc=example,dc=com"
 rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr
 
-TLSCertificateFile test/fixtures/env/slapdcert.pem
-TLSCertificateKeyFile test/fixtures/env/slapdkey.pem
+TLSCertificateFile test/env/slapdcert.pem
+TLSCertificateKeyFile test/env/slapdkey.pem
