dependency updates, refactoring, es6 (#7)
- authn: replace async.detect with local fn
- aliases: replace async with Promise.all
- dep(async): removed
- dep(ldapjs): update from 1.0.2 to 2.3.3
- noop: remove useless returns
- es6: more arrow functions
- style: inline use of `plugin`
- ci: switch travis -> GHA
- ci: enable codeql
- test: use RFC example.com for test domain
- test: refactored some to improve error messages
- test: add fixtures for setting up slapd on macosx and linux
- doc(README): update with GHA badge

## Test Failure

There's a test failure thats a bit difficult to track down. It manifests
when the entire test suite is run and doesn't when a single test file is
run. I'm not sure if the concurrency / race condition is within this
module or ldapjs but I've no more time to track it down.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "haraka-plugin-ldap",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Haraka plugin for LDAP",
   "main": "index.js",
   "directories": {},
   "scripts": {
-    "lint": "npx eslint *.js test/**/*.js",
-    "lintfix": "npx eslint --fix *.js test/**/*.js",
-    "test": "npx mocha"
+    "lint": "npx eslint *.js test/*.js",
+    "lintfix": "npx eslint --fix *.js test/*.js",
+    "test": "npx mocha --exit",
+    "versions": "npx dependency-version-checker check"
   },
   "keywords": [
     "haraka",
@@ -24,19 +25,18 @@
     "name": "Ansgar Tasler",
     "email": "ansgar.tasler@warkdag.com"
   },
-  "repository": "https://github.com/tasansga/haraka-ldap.git",
+  "repository": "https://github.com/haraka/haraka-plugin-ldap.git",
   "license": "MIT",
   "devDependencies": {
     "btoa": "*",
-    "eslint": "*",
+    "eslint": "8",
     "eslint-plugin-haraka": "*",
     "haraka-test-fixtures": "*",
-    "mocha": "*"
+    "mocha": "9"
   },
   "dependencies": {
     "address-rfc2821": "*",
-    "async": "^3.2.2",
     "haraka-constants": "*",
-    "ldapjs": "^1.0.2"
+    "ldapjs": "^2.3.3"
   }
 }
