--- a/test/env/Dockerfile
+++ b/test/env/Dockerfile
@@ -12,7 +12,7 @@ RUN \
     ldapadd -Y EXTERNAL -H ldapi:/// -f /etc/openldap/schema/cosine.ldif && \
     ldapadd -Y EXTERNAL -H ldapi:/// -f /etc/openldap/schema/misc.ldif && \
     ldapadd -Y EXTERNAL -H ldapi:/// -f /config.ldif && \
-    ldapadd -x -D "cn=Manager,dc=my-domain,dc=com" \
+    ldapadd -x -D "cn=Manager,dc=example,dc=com" \
             -w "rAR84,NZ=F" -H ldapi:/// -f /testdata.ldif && \
     rm -f /config.ldif /testdata.ldif
 
@@ -21,4 +21,4 @@ EXPOSE 636
 
 ENTRYPOINT ["/usr/sbin/slapd", "-u", "ldap", "-h" , "ldap:/// ldaps:///", "-d129"]
 
-# run with: docker run -p 389:389 -p 636:636 [...] 
+# run with: docker run -p 389:389 -p 636:636 [...]
