--- a/test/fixtures/linux/slapd.conf
+++ b/test/fixtures/linux/slapd.conf
@@ -4,17 +4,17 @@ include   /etc/ldap/schema/misc.schema
 include   /etc/ldap/schema/inetorgperson.schema
 # include   /etc/ldap/schema/nis.schema
 
-pidfile  /tmp/slapd/slapd.pid
-argsfile /tmp/slapd/slapd.args
+pidfile  /var/run/slapd/slapd.pid
+#argsfile /var/tmp/slapd/slapd.args
 
-modulepath /usr/lib/openldap
+modulepath /usr/lib/ldap
 
 database  ldif
 directory /tmp/slapd
 
-suffix    "dc=my-domain,dc=com"
-rootdn    "cn=admin,dc=my-domain,dc=com"
-rootpw    {SSHA}bPf32h0ItVUKLlVzsR6od+Ub5GDZRBIr
+suffix    "dc=example,dc=com"
+rootdn    "cn=admin,dc=example,dc=com"
+rootpw    {SSHA}2Gl8VBvuOxkhcrVCRNzDcCG9ecJHg0gl
 
 TLSCertificateFile test/env/slapdcert.pem
 TLSCertificateKeyFile test/env/slapdkey.pem
