--- a/config/ldap.ini
+++ b/config/ldap.ini
@@ -1,5 +1,5 @@
-server[] = ldap://localhost:389
-server[] = ldaps://localhost:636
+; server[] = ldap://localhost:389
+; server[] = ldaps://localhost:636
 binddn = uid=user1,ou=users,dc=example,dc=com
 bindpw = ykaHsOzEZD
 basedn = example.com
