test: use 127.0.0.1 vs localhost to avoid IPv6 failure

--- a/test/config/ldap.ini
+++ b/test/config/ldap.ini
@@ -1,5 +1,5 @@
-server[] = ldap://localhost:389
-server[] = ldaps://localhost:636
+server[] = ldap://127.0.0.1:389
+server[] = ldaps://127.0.0.1:636
 binddn = uid=user1,ou=users,dc=example,dc=com
 bindpw = ykaHsOzEZD
 basedn = example.com
